--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -30,7 +30,7 @@ import FitnessFollowupLogo from '../assets/kettlebell-envelope-icon.svg';
             class="logo-img"
           />
         </span>
-        <span class="brand-name" aria-hidden="true">FitnessFollowup</span>
+        <span class="brand-name" aria-hidden="true">FitnessFollowups</span>
       </button>
 
       <div class="nav-links">
